[package]
name = "dslib"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
decorum = "0.3.1"
colored = "2.0.0"
log = "0.4.17"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]