[package]
name = "dslib"
version = "0.1.1"
description = "A simulation-based framework for teaching distributed systems."
repository = "https://github.com/osukhoroslov/dslib"
authors = ["Oleg Sukhoroslov <oleg.sukhoroslov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
decorum = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
rand_pcg = "0.3.1"
regex = "1.6.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]